--- a/src/styles/foundation/_sizing.scss
+++ b/src/styles/foundation/_sizing.scss
@@ -17,3 +17,6 @@ $sizes: (
   "xl": 64px,
   "xxl": 72px
 );
+
+$xl-breakpoint-sm-size: #{map-get($breakpoints, xl) + map-get($sizes, sm)};
+$xl-breakpoint-sm-size-min: #{map-get($breakpoints, xl) + map-get($sizes, sm) + 1px};
